<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Social Connections</string>
    
    <string name="menu_settings">Settings</string>
    <string name="back">Back</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="LogIn">Log In</string>
    <string name="loginInfo">Please, enter your login details below:</string>
    <string name="title_activity_student_menu">StudentMenu</string>
    <string name="studentMenu">Student Menu:</string>
    <string name="checkAttendance">Check Attendance</string>
    <string name="viewResults">View Your Results</string>
    <string name="makeExcuse">Excuse Yourself for Missing Class</string>
    <string name="logOut">Log Out</string>
    <string name="title_activity_lecturer_menu">LecturerMenu</string>
    <string name="lecturerMenu">Lecturer Menu:</string>
    <string name="takeAttendance">Take Attendance</string>
    <string name="postNotes">Post Notes on Dropbox</string>
    <string name="viewStudentAttendance">View Student Attendance</string>
 	<string name="title_activity_web">Web</string>
    <string name="menu">Menu</string>
    <string name="ok">OK</string>
    <string name="formError">Form fields may not be empty</string>
    <string name="take_attendance">Take Attendance</string>
        
    <!-- For remote authentication -->
    <string name="noAdminAccess">Admin access is not allowed via the android app</string>
    <string name="noSuperAccess">Super User access is not allowed via the android app</string>
    <string name="unknowAuthError">An unknown authentication error has occurred</string>
    <string name="httpError">HTTP error %s</string>
    <string name="httpResponseError">Can\'t decode response</string>
    <string name="error401">Error: Invalid username or password.</string>
    <string name="error429">You have exceeded your maximum number of login attempts. Please try again later.</string>
    
    <!-- For facial recognition -->
    <string name="title_activity_pic_upload">PicUpload</string>
    <string name="details">Enter details below:</string>
    <string name="student_id">Student ID:</string>
    <string name="upload">Upload Picture</string>
    <string name="uploadOk">The picture was successfully uploaded</string>
    <string name="add_picture">Add/Change Picture</string>
    <string name="picturePreview">Picture Preview</string>
    <string name="noPicture">Error: Please add a picture before uploading</string>
    <string name="noValidFaces">Error: Not even one face was recognised. Is there no one in the classroom?</string>
    <string name="noFaces">Error: No faces found in picture, please try again</string>
    <string name="tooManyFaces">Error: Found more than one face, but there must be exactly one face in the picture. Please try again.</string>
    <string name="add_attendance_picture">Add picture</string>
    <string name="take_attendance_hint">Add a picture to begin</string>
    <string name="status">Recognised %1$d out of %2$d faces in picture %3$d</string>
    <string name="malformed_json">Could not decode the server response (malformed JSON)</string>
    <string name="malformed_response">Could not decode the server response (malformed response)</string>
    <string name="loading">Loading#8230;</string>

<!-- Other -->
    <string name="save">Save</string>
    <string name="notes">Notes</string>
    <string name="twitter">Twitter</string>
    <string name="manageAssessments">Manage Assessments</string>
    <string name="manageStudents">Manage Students</string>
    <string name="manageGroups">Manage Groups</string>
</resources>